--- a/server/CONFIG
+++ b/server/CONFIG
@@ -3,44 +3,24 @@ server {
     listen [::]:80;
     server_name DOMAIN_NAME;
 
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name DOMAIN_NAME;
-
-    ssl_certificate /etc/letsencrypt/live/DOMAIN_NAME/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/DOMAIN_NAME/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    root /var/www/html;
-    index index.html index.htm index.nginx-debian.html;
-
     location / {
         proxy_pass https://audio.ngfiles.com;
-        
+
         proxy_set_header Host audio.ngfiles.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_buffering off;
-        proxy_set_header Accept-Encoding "";  
-        proxy_read_timeout 120;
-    }
+        proxy_buffering on;
+        proxy_buffers 8 16k;
+        proxy_buffer_size 32k;
 
-    location /static/ {
-        try_files $uri $uri/ =404;
-    }
-}
+        proxy_set_header Range $http_range;
+        proxy_set_header If-Range $http_if_range;
 
-server {
-    listen 80;
-    listen [::]:80;
-    server_name DOMAIN_NAME;
-    
-    return 404;
+        proxy_read_timeout 300;
+        proxy_send_timeout 300;
+
+        proxy_set_header Accept-Encoding "";
+    }
 }
